Fixed responsive design on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ nav {
   left: 0;
   top: 0;
   width: 100%;
-  height: 8%;
+  height: 9%;
   color: #1E2A38;
   background-color: #E07A5F;
   display: flex;
@@ -134,7 +134,7 @@ nav {
 }
 
 .nav-small {
-  height: 6%;
+  height: 7%;
 }
 
 .logo,
@@ -520,11 +520,6 @@ button {
   border: none;
   cursor: pointer;
 }
-@media screen and (min-width: 1124px) {
-  button {
-    width: 30%;
-  }
-}
 button:hover {
   box-shadow: 0 0 15px grey;
   background-color: #1E2A38;
@@ -564,9 +559,11 @@ footer {
   }
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
+@media screen and (min-width: 726px) {
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .col {
