--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -7,7 +7,7 @@ nav {
     left: 0;
     top: 0;
     width: 100%;
-    height: 8%;
+    height: 9%;
     color: $color-navy;
     background-color: $color-terracotta;
     display: flex;
@@ -17,7 +17,7 @@ nav {
 }
 
 .nav-small {
-    height: 6%;
+    height: 7%;
 }
 
 
